--- a/css/style.css
+++ b/css/style.css
@@ -3,8 +3,6 @@ body {
 	margin: 0;
 	font-family: Verdana, Helvetica, sans-serif;
 	cursor: default;
-	font-size: 80%;
-	background: #e6ffd8 url(../images/lightbg.jpg) repeat-x;
 }
 
 h1 {
@@ -85,7 +83,7 @@ a img {
 	color: #000;
 	border: 0;
 	padding: 4px 7px;
-	text-decoration: underline;
+	text-decoration: none;
 }
 
 #nav a:hover {
